Upd README and package.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,7 @@
     "type": "git",
     "url": "git+https://1160929@bitbucket.org/1160929/arqsi_2021.git"
   },
-  "author": "Jorge Azevedo (1160929)",
+  "author": "Jorge Azevedo (1160929), Nuno Dinis (1161042), Daniel Coelho (1160943), Filipe Sousa (1150470)",
   "license": "MIT",
   "homepage": "https://bitbucket.org/1160929/arqsi_2021#readme",
   "dependencies": {
