--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -17,6 +17,8 @@
   "homepage": "https://bitbucket.org/1160929/arqsi_2021#readme",
   "dependencies": {
     "config": "^3.3.2",
+    "core-util-is": "^1.0.2",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.2.1",
