--- a/RedeMasterData/src/package.json
+++ b/RedeMasterData/src/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.2.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "momentum": "^4.0.0",
     "mongoose": "^5.10.9"
   },
   "devDependencies": {
