Upd package json

--- a/RedeMasterData/src/package.json
+++ b/RedeMasterData/src/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "RedeMasterData",
+  "name": "rede-master-data",
   "version": "1.0.0",
   "description": "Project carried out during the 1st semester in the Systems Architecture class at ISEP",
   "main": "app.js",
