--- a/RedeMasterData/src/package.json
+++ b/RedeMasterData/src/package.json
@@ -4,7 +4,7 @@
   "description": "Project carried out during the 1st semester in the Systems Architecture class at ISEP",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
     "start": "node app",
     "dev": "nodemon app"
   },
