Integration testes for not Get Node. Requires conncetion string handling.

--- a/RedeMasterData/src/.env.example
+++ b/RedeMasterData/src/.env.example
@@ -1,3 +1,4 @@
 NODE_ENV=development
 APP_PORT=3000
 DB_CONNECT=mongodb+srv://arqsi:arqsi@cluster0.mywjf.mongodb.net/test
+DB_CONNECT_TEST= connection string here 
