--- a/RedeMasterData/src/package.json
+++ b/RedeMasterData/src/package.json
@@ -17,7 +17,6 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/1160929/arqsi_2021#readme",
   "dependencies": {
-    "chai-json": "^1.0.0",
     "config": "^3.3.2",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
@@ -27,9 +26,12 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
-    "mongoose": "^5.10.9"
+    "mongoose": "^5.10.9",
+    "save-dev": "0.0.1-security"
   },
   "devDependencies": {
+    "chai-as-promised": "^7.1.1",
+    "chai-json": "^1.0.0",
     "axios": "^0.21.0",
     "chai": "^4.2.0",
     "get-port": "^5.1.1",
