--- a/RedeMasterData/src/package.json
+++ b/RedeMasterData/src/package.json
@@ -17,19 +17,25 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/1160929/arqsi_2021#readme",
   "dependencies": {
+    "axios": "^0.21.0",
+    "chai": "^4.2.0",
     "config": "^3.3.2",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "joi": "^17.2.1",
+    "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
+    "mocha": "^8.2.1",
     "moment": "^2.29.1",
     "mongoose": "^5.10.9",
-    "save-dev": "0.0.1-security"
+    "save-dev": "0.0.1-security",
+    "sinon": "^2.4.1",
+    "sinon-chai": "^3.5.0"
   },
   "devDependencies": {
+    "jest": "^26.6.3",
     "chai-as-promised": "^7.1.1",
     "chai-json": "^1.0.0",
     "axios": "^0.21.0",
