move package.json and .env to project root

--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -2,7 +2,7 @@
   "name": "rede-master-data",
   "version": "1.0.0",
   "description": "Project carried out during the 1st semester in the Systems Architecture class at ISEP",
-  "main": "app.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "jest",
     "start": "node app",
