--- a/ImportGLX/package.json
+++ b/ImportGLX/package.json
@@ -2,7 +2,7 @@
   "name": "import-glx",
   "version": "1.0.0",
   "description": "Project carried out during the 1st semester in the Systems Architecture class at ISEP",
-  "main": "src/app.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app",
