--- a/viajantes2-spa/package.json
+++ b/viajantes2-spa/package.json
@@ -21,7 +21,6 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
-    "config": "^3.3.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
@@ -30,6 +29,7 @@
     "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
+    "@types/config": "0.0.37",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.19.8",
