--- a/viajantes2-spa/package.json
+++ b/viajantes2-spa/package.json
@@ -29,6 +29,7 @@
     "@angular-devkit/build-angular": "^0.1100.2",
     "@angular/cli": "~10.1.7",
     "@angular/compiler-cli": "~10.1.6",
+    "@ngtools/webpack": "^11.0.2",
     "@types/config": "0.0.37",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
