--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -37,6 +37,7 @@
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-json": "^1.0.0",
+    "cypress": "^6.0.1",
     "get-port": "^5.1.1",
     "jest": "^26.6.3",
     "mocha": "^8.2.1",
