update pipeline and deployments

--- a/Kubernets/importglx_deployment.yaml
+++ b/Kubernets/importglx_deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: importglx
-        image: wultyc/viajantes2-importglx
+        image: wultyc/viajantes2-importglx:latest
         imagePullPolicy: Always
         ports:
         - containerPort: 3002
