--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,35 +7,73 @@ image: atlassian/default-image:2
 pipelines:
   custom:
     deploy-to-cloud:
-      - step:
-          name: 'Test RedeMasterData'
-          script:
-            - cd RedeMasterData
-            #- npm install
-            - echo "Tests ignored"
-      - step:
-          name: Build Image and Save on DockerHub
-          script:
-            - export IMAGE_NAME=$DOCKER_HUB_USERNAME/viajantes2-redemasterdata:latest
-            # build the Docker image (this will use the Dockerfile in the root of the repo)
-            - docker build -t $IMAGE_NAME ./RedeMasterData
-            # authenticate with the Docker Hub registry
-            - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-            # push the new Docker image to the Docker registry
-            - docker push $IMAGE_NAME
-          services:
-            - docker
-      - step:
-          name: Deploy to Kubernets
-          deployment: production
-          script:
-            # Download kubectl
-            - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
-            - chmod +x ./kubectl
-            - mv ./kubectl /usr/local/bin/kubectl
+      - parallel:
+        - step:
+            name: 'Test RedeMasterData'
+            script:
+              - cd RedeMasterData
+              #- npm install
+              - echo "Tests ignored"
+        - step:
+            name: 'Test ImportGLX'
+            script:
+              - cd RedeMasterData
+              #- npm install
+              - echo "Tests ignored"
 
-            # Set KUBECONFIG
-            - echo $KUBECONFIG | base64 -d > kubeconfig.yml
-            - export KUBECONFIG=kubeconfig.yml
+      - parallel:
+        - step:
+            name: Build RedeMasterData Image and Upload on DockerHub
+            script:
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2:redemasterdata
+              # build the Docker image (this will use the Dockerfile in the root of the repo)
+              - docker build -t $IMAGE_NAME ./RedeMasterData
+              # authenticate with the Docker Hub registry
+              - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
+              # push the new Docker image to the Docker registry
+              - docker push $IMAGE_NAME
+            services:
+              - docker
+        - step:
+            name: Build ImportGLX Image and Upload on DockerHub
+            script:
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2:importglx
+              # build the Docker image (this will use the Dockerfile in the root of the repo)
+              - docker build -t $IMAGE_NAME ./ImportGLX
+              # authenticate with the Docker Hub registry
+              - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
+              # push the new Docker image to the Docker registry
+              - docker push $IMAGE_NAME
+            services:
+              - docker
+              
+      - parallel:
+        - step:
+            name: Deploy RedeMasterData to Kubernets
+            script:
+              # Download kubectl
+              - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+              - chmod +x ./kubectl
+              - mv ./kubectl /usr/local/bin/kubectl
 
-            - kubectl apply -f ./Kubernets/redemasterdata_deployment.yaml
+              # Set KUBECONFIG
+              - echo $KUBECONFIG | base64 -d > kubeconfig.yml
+              - export KUBECONFIG=kubeconfig.yml
+              
+              #Deploy to cloud
+              - kubectl apply -f ./Kubernets/redemasterdata.yaml
+        - step:
+            name: Deploy ImportGLX to Kubernets
+            script:
+              # Download kubectl
+              - curl -LO https://storage.googleapis.com/kubernetes-release/release/$(curl -s https://storage.googleapis.com/kubernetes-release/release/stable.txt)/bin/linux/amd64/kubectl
+              - chmod +x ./kubectl
+              - mv ./kubectl /usr/local/bin/kubectl
+
+              # Set KUBECONFIG
+              - echo $KUBECONFIG | base64 -d > kubeconfig.yml
+              - export KUBECONFIG=kubeconfig.yml
+              
+              #Deploy to cloud
+              - kubectl apply -f ./Kubernets/importglx.yaml
+
