--- a/Kubernets/importglx.yaml
+++ b/Kubernets/importglx.yaml
@@ -1,13 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: importglx-service
-  annotations:
-    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
+  name: importglx
   labels:
-    app: importglx-service
+    app: importglx
 spec:
-  type: LoadBalancer
   ports:
   - name: http
     port: 3002
