--- a/Kubernets/redemasterdata.yaml
+++ b/Kubernets/redemasterdata.yaml
@@ -1,13 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: redemasterdata-service
-  annotations:
-    service.beta.kubernetes.io/linode-loadbalancer-throttle: "4"
+  name: redemasterdata
   labels:
-    app: redemasterdata-service
+    app: redemasterdata
 spec:
-  type: LoadBalancer
   ports:
   - name: http
     port: 3003
