--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -25,7 +25,7 @@ pipelines:
         - step:
             name: Build RedeMasterData Image and Upload on DockerHub
             script:
-              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2:redemasterdata
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-redemasterdata:latest
               # build the Docker image (this will use the Dockerfile in the root of the repo)
               - docker build -t $IMAGE_NAME ./RedeMasterData
               # authenticate with the Docker Hub registry
@@ -37,7 +37,7 @@ pipelines:
         - step:
             name: Build ImportGLX Image and Upload on DockerHub
             script:
-              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2:importglx
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-importglx:latest
               # build the Docker image (this will use the Dockerfile in the root of the repo)
               - docker build -t $IMAGE_NAME ./ImportGLX
               # authenticate with the Docker Hub registry
