--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -27,42 +27,44 @@ pipelines:
               #- npm install
               - echo "Tests ignored"
 
-      - step:
-          name: Build RedeMasterData Image and Upload on DockerHub
-          script:
-            - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-redemasterdata:latest
-            # build the Docker image (this will use the Dockerfile in the root of the repo)
-            - docker build -t $IMAGE_NAME ./RedeMasterData
-            # authenticate with the Docker Hub registry
-            - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-            # push the new Docker image to the Docker registry
-            - docker push $IMAGE_NAME
-          services:
-            - docker
-      - step:
-          name: Build ImportGLX Image and Upload on DockerHub
-          script:
-            - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-importglx:latest
-            # build the Docker image (this will use the Dockerfile in the root of the repo)
-            - docker build -t $IMAGE_NAME ./ImportGLX
-            # authenticate with the Docker Hub registry
-            - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-            # push the new Docker image to the Docker registry
-            - docker push $IMAGE_NAME
-          services:
-            - docker
-      - step:
-          name: Build SPA Image and Upload on DockerHub
-          script:
-            - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-spa:latest
-            # build the Docker image (this will use the Dockerfile in the root of the repo)
-            - docker build -t $IMAGE_NAME ./viajantes2-spa
-            # authenticate with the Docker Hub registry
-            - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
-            # push the new Docker image to the Docker registry
-            - docker push $IMAGE_NAME
-          services:
-            - docker
+      - parallel:
+        - step:
+            name: Build RedeMasterData Image and Upload on DockerHub
+            script:
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-redemasterdata:latest
+              # build the Docker image (this will use the Dockerfile in the root of the repo)
+              - docker build -t $IMAGE_NAME ./RedeMasterData
+              # authenticate with the Docker Hub registry
+              - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
+              # push the new Docker image to the Docker registry
+              - docker push $IMAGE_NAME
+            services:
+              - docker
+        - step:
+            name: Build ImportGLX Image and Upload on DockerHub
+            script:
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-importglx:latest
+              # build the Docker image (this will use the Dockerfile in the root of the repo)
+              - docker build -t $IMAGE_NAME ./ImportGLX
+              # authenticate with the Docker Hub registry
+              - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
+              # push the new Docker image to the Docker registry
+              - docker push $IMAGE_NAME
+            services:
+              - docker
+        - step:
+            name: Build SPA Image and Upload on DockerHub
+            script:
+              - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-spa:latest
+              # build the Docker image (this will use the Dockerfile in the root of the repo)
+              - docker build -t $IMAGE_NAME ./viajantes2-spa
+              # authenticate with the Docker Hub registry
+              - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
+              # push the new Docker image to the Docker registry
+              - docker push $IMAGE_NAME
+            services:
+              - docker
+            size: 2x
               
       - step:
           name: Deploy containers to Kubernets
