--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -55,9 +55,15 @@ pipelines:
         - step:
             name: Build SPA Image and Upload on DockerHub
             script:
+              - cd viajantes2-spa
+              # install npm
+              - npm install
+              # build app
+              - npm run build
+              # set image name
               - export IMAGE_NAME=$DOCKER_HUB_USERNAME/arqsi-viajantes2-spa:latest
               # build the Docker image (this will use the Dockerfile in the root of the repo)
-              - docker build -t $IMAGE_NAME ./viajantes2-spa
+              - docker build -t $IMAGE_NAME .
               # authenticate with the Docker Hub registry
               - docker login --username $DOCKER_HUB_USERNAME --password $DOCKER_HUB_PASSWORD
               # push the new Docker image to the Docker registry
