--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -56,6 +56,8 @@ pipelines:
             name: Build SPA Image and Upload on DockerHub
             script:
               - cd viajantes2-spa
+              # install angular
+              - npm install -g @angular/cli  @angular-devkit/build-angular @ngtools/webpack
               # install npm
               - npm install --only=production
               # build app
