--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -5,8 +5,8 @@
 image: node:10.15.0
 
 pipelines:
-  custom:
-    deploy-to-cloud:
+  branches:
+     release:
       - parallel:
         - step:
             name: 'Test RedeMasterData'
