--- a/viajantes2-spa/package.json
+++ b/viajantes2-spa/package.json
@@ -10,6 +10,9 @@
     "e2e": "ng e2e"
   },
   "private": true,
+  "author": "Jorge Azevedo (1160929), Nuno Dinis (1161042), Daniel Coelho (1160943), Diogo Barreto (1150468)",
+  "license": "MIT",
+  "homepage": "https://bitbucket.org/1160929/1160929_1161042_1160943_1150470_viajantes2",
   "dependencies": {
     "@angular/animations": "~10.1.6",
     "@angular/cdk": "^10.2.7",
