--- a/ImportGLX/package.json
+++ b/ImportGLX/package.json
@@ -17,7 +17,9 @@
   "license": "MIT",
   "homepage": "https://bitbucket.org/1160929/1160929_1161042_1160943_1150470_viajantes2#readme",
   "dependencies": {
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.11.8",
     "node-config-ts": "^3.1.0"
   },
   "devDependencies": {
