--- a/ImportGLX/package.json
+++ b/ImportGLX/package.json
@@ -23,8 +23,10 @@
     "node-config-ts": "^3.1.0"
   },
   "devDependencies": {
+    "@types/config": "0.0.37",
     "@types/express": "^4.17.9",
     "@types/node": "^14.14.14",
+    "@types/webpack": "^4.41.25",
     "nodemon": "^2.0.6",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
