--- a/ImportGLX/package.json
+++ b/ImportGLX/package.json
@@ -24,6 +24,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.0",
+    "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "node-config-ts": "^3.1.0"
   },
