--- a/ImportGLX/package.json
+++ b/ImportGLX/package.json
@@ -26,7 +26,8 @@
     "express-fileupload": "^1.2.0",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
-    "node-config-ts": "^3.1.0"
+    "node-config-ts": "^3.1.0",
+    "xml2js": "^0.4.23"
   },
   "devDependencies": {
     "@types/config": "0.0.37",
