--- a/ImportGLX/package.json
+++ b/ImportGLX/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://bitbucket.org/1160929/1160929_1161042_1160943_1150470_viajantes2#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "caller": "^1.0.1",
     "config": "^3.3.2",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
