--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -26,7 +26,8 @@
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
-    "node-config-ts": "^3.1.0"
+    "node-config-ts": "^3.1.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
