--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -27,7 +27,8 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "node-config-ts": "^3.1.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "uuidv4": "^6.2.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.9",
