--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -27,6 +27,7 @@
     "moment": "^2.29.1",
     "mongoose": "^5.11.8",
     "node-config-ts": "^3.1.0",
+    "shallow-equal-object": "^1.1.1",
     "uuid": "^8.3.2",
     "uuidv4": "^6.2.6"
   },
