--- a/ViagemMasterData/appsettings.json
+++ b/ViagemMasterData/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "ViagemMD": "Server=tcp:arqsi-viajantes2.database.windows.net,1433;Initial Catalog=Viajantes2VMD;Persist Security Info=False;User ID=jorge;Password=29UY^X&rUJo3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
