--- a/ViagemMasterData/Properties/launchSettings.json
+++ b/ViagemMasterData/Properties/launchSettings.json
@@ -4,24 +4,24 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:44786",
-      "sslPort": 44343
+      "applicationUrl": "http://localhost:3004",
+      "sslPort": 0
     }
   },
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "DDDSample1": {
+    "ViagemMasterData": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "api/values",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "http://localhost:3004",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
