--- a/ViagemMasterData/ViagemMasterData.csproj
+++ b/ViagemMasterData/ViagemMasterData.csproj
@@ -10,6 +10,8 @@
     
     <PackageReference Include="FluentValidation" Version="9.3.0" />
     
+    <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.7" />
+    
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="5.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.1" />
