--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -32,11 +32,12 @@
     "uuidv4": "^6.2.6"
   },
   "devDependencies": {
+    "@types/config": "0.0.37",
     "@types/express": "^4.17.9",
     "@types/express-fileupload": "^1.1.6",
+    "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.14",
     "@types/webpack": "^4.41.25",
-    "@types/config": "0.0.37",
     "axios": "^0.21.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
@@ -44,9 +45,9 @@
     "jest": "^26.6.3",
     "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
-    "ts-node": "^9.1.1",
-    "typescript": "^4.1.3",
     "sinon": "^9.2.1",
-    "sinon-chai": "^3.5.0"
+    "sinon-chai": "^3.5.0",
+    "ts-node": "^9.1.1",
+    "typescript": "^4.1.3"
   }
 }
