--- a/viajantes2-spa/package.json
+++ b/viajantes2-spa/package.json
@@ -25,6 +25,8 @@
     "@angular/platform-browser": "~10.1.6",
     "@angular/platform-browser-dynamic": "~10.1.6",
     "@angular/router": "~10.1.6",
+    "amazing-time-picker": "^1.8.0",
+    "moment": "^2.29.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
