--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha  --require ts-node/register \"src/tests/unit-tests/*.ts\" --timeout 100000"
   },
   "repository": {
     "type": "git",
