--- a/RedeMasterData/package.json
+++ b/RedeMasterData/package.json
@@ -7,6 +7,7 @@
     "start": "node dist/app.js",
     "dev": "nodemon src/app.ts",
     "build": "tsc -p .",
+    "integrationTest": "mocha --exit --require ts-node/register \"src/tests/integration-tests/*.ts\" --timeout 100000",
     "test": "mocha  --require ts-node/register \"src/tests/unit-tests/*.ts\" --timeout 100000"
   },
   "repository": {
@@ -18,6 +19,7 @@
   "homepage": "https://bitbucket.org/1160929/1160929_1161042_1160943_1150470_viajantes2#readme",
   "dependencies": {
     "caller": "^1.0.1",
+    "chai-http": "^4.3.0",
     "core-util-is": "^1.0.2",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
