--- a/RedeMasterData/tsconfig.json
+++ b/RedeMasterData/tsconfig.json
@@ -61,6 +61,7 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "exclude": [
-    "src/core/domain/events/tests/"
+    "src/core/domain/events/tests/",
+    "src/tests/**/**/.ts"
   ]
 }
