using new connection string.

--- a/ViagemMasterData/ViagemMasterData/appsettings.json
+++ b/ViagemMasterData/ViagemMasterData/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "ViagemMD": "Server=tcp:arqsi-viajantes2.database.windows.net,1433;Initial Catalog=Viajantes2VMD;Persist Security Info=False;User ID=jorge;Password=29UY^X&rUJo3;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "ViagemMD": "Server=tcp:arqsiviajantes2.database.windows.net,1433;Initial Catalog=Viajantes2VMD;Persist Security Info=False;User ID=nuno;Password=nossomosviajantes2!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
   }
 }
