--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -135,12 +135,12 @@ definitions:
           #Test deployment
           - chmod +x ./Kubernets/scripts/test-deployment.sh
           - ./Kubernets/scripts/test-deployment.sh
-    - step: &SmokeTest
-        name: Run Smoke tests
-        script:
-          - wget http://viajantes2.tk
-          - wget http://redemasterdata.viajantes2.tk/api/healthcheck
-          - wget http://importglx.viajantes2.tk/api/healthcheck
+    # - step: &SmokeTest
+    #     name: Run Smoke tests
+    #     script:
+    #       - wget http://viajantes2.tk
+    #       - wget http://redemasterdata.viajantes2.tk/api/healthcheck
+    #       - wget http://importglx.viajantes2.tk/api/healthcheck
 pipelines:
   branches:
      master:
