--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,6 +8,7 @@ definitions:
     - step: &Test-RMD
         name: Run RedeMasterData tests
         script:
+          - cd RedeMasterData/
           - npm run test
           - npm run integrationTest
         # condition:
