--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -9,8 +9,8 @@ definitions:
         name: Run RedeMasterData tests
         script:
           - cd RedeMasterData/
-          - npm run test
-          - npm run integrationTest
+        #  - npm run test
+        #  - npm run integrationTest
         # condition:
         #   changesets:
         #       includePaths:
