--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -11,7 +11,7 @@ definitions:
           - cd RedeMasterData/
           - npm install
           - npm run test
-          - npm run integrationTest
+          #- npm run integrationTest
         # condition:
         #   changesets:
         #       includePaths:
